third_party/move/move-compiler-v2/transactional-tests/tests/misc/invalid_shift_in_consts.exp
processed 1 task
task 0 lines 1-9:  publish [module 0xc0ffee::m {]
Error: compilation errors:
 error: Invalid expression in `const`. Operand on the right is too large for `<<`, should be less than `8`
  ┌─ TEMPFILE:3:20
  │
3 │     const C1: u8 = 0 << 8;
  │                    ^^^^^^

error: Invalid expression in `const`. Operand on the right is too large for `>>`, should be less than `8`
  ┌─ TEMPFILE:4:20
  │
4 │     const C2: u8 = 0 >> 8;
  │                    ^^^^^^


